@@ -253,6 +253,37 @@ if test x$enable_vfs_methods = xyes; then
 fi
 
 dnl ==============================================
+dnl About-me
+dnl ==============================================
+AC_ARG_ENABLE(aboutme,
+   AC_HELP_STRING([--enable-aboutme],
+                  [Enable about-me capplet]),,
+   enable_aboutme=no)
+
+if test "x$enable_aboutme" = "xyes"; then
+  LIBEBOOK_REQUIREMENT="libebook-1.2 >= 1.3.0"
+
+  AC_MSG_CHECKING(for evolution-data-server)
+  if $PKG_CONFIG --exists libebook-1.2; then
+     AC_MSG_RESULT(yes)
+     LIBEBOOK_REQUIREMENT="libebook-1.2 >= 1.3.0"
+     AC_DEFINE(BUILD_ABOUTME, 1, Build the about-me capplet)
+       
+     PKG_CHECK_MODULES(LIBEBOOK, libebook-1.2)
+  fi
+else
+  AC_MSG_RESULT(no)
+fi
+
+if test -n "$LIBEBOOK_REQUIREMENT"; then
+  AC_DEFINE([HAVE_LIBEBOOK], 1,
+            [Defined when evolution-data-server libebook-1.2 is detected])
+fi
+
+AM_CONDITIONAL(BUILD_ABOUTME, test -n "$LIBEBOOK_REQUIREMENT")
+AM_CONDITIONAL(HAVE_LIBEBOOK, test -n "$LIBEBOOK_REQUIREMENT")
+
+dnl ==============================================
 dnl End: Check that we meet the  dependencies
 dnl ==============================================
 
@@ -512,6 +543,7 @@ capplets/accessibility/keyboard/Makefile
 capplets/accessibility/at-properties/Makefile
 capplets/network/Makefile
 capplets/windows/Makefile
+capplets/about-me/Makefile
 typing-break/Makefile
 schemas/Makefile
 libsounds/Makefile
@@ -535,6 +567,7 @@ capplets/ui-properties/gnome-ui-properties.desktop.in
 capplets/network/gnome-network-preferences.desktop.in
 capplets/windows/window-properties.desktop.in
 capplets/keyboard/keyboard.desktop.in
+capplets/about-me/gnome-about-me.desktop.in
 control-center/gnomecc.desktop.in
 ])
 
