@@ -1,3 +1,9 @@
+2005-06-22  Diego Gonzalez <diego@pemas.net>
+
+        * configure.in: add code to conditionally enable the compilation of
+	  the about-me capplet
+        * capplets/Makefile.am: ditto
+
 2005-06-12  Sebastien Bacher  <seb128@debian.org>
 
 	* configure.in: update to 2.11.5
